Created results.html template

--- a/src/main/resources/templates/blogpost/index.html
+++ b/src/main/resources/templates/blogpost/index.html
@@ -30,10 +30,11 @@
 
 </body>
 </html>
-// th:* attribute gets namespace declared as Thymeleaf stores our subscribers input for the database as variables
 
-// The form is added in the body bringing in the title, author, and blog entry of the blog post
-// It is set up like an HTML form. Notice the "th:" attribute in the tags to make connection between our database tables
-// and the form
+<!-- th:* attribute gets namespace declared as Thymeleaf stores our subscribers input for the database as variables
 
-// Notice, the field names reference the attribute of our Blog Post Class (fields in our database table)
+ The form is added in the body bringing in the title, author, and blog entry of the blog post
+ It is set up like an HTML form. Notice the "th:" attribute in the tags to make connection between our database tables
+ and the form
+
+ Notice, the field names reference the attribute of our Blog Post Class (fields in our database table) -->
