added bootstrap webjars to html pages

--- a/src/main/resources/templates/blogpost/index.html
+++ b/src/main/resources/templates/blogpost/index.html
@@ -3,8 +3,10 @@
 <head>
     <title>Blog Site</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link href="webjars/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<div class="container">
 <h1>Welcome to Our Blog Post Site!</h1>
 <h3>Check out our blogs!</h3>
 <p>Please use the form below to submit a Blog Post:</p>
@@ -27,7 +29,9 @@
         </tr>
     </table>
 </form>
-
+<script src="webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="webjars/jquery/1.9.1/jquery.min.js"></script>
+</div>
 </body>
 </html>
 
