--- a/src/main/resources/templates/blogpost/index.html
+++ b/src/main/resources/templates/blogpost/index.html
@@ -9,6 +9,26 @@
 <div class="container">
 <h1>Welcome to Our Blog Post Site!</h1>
 <h3>Check out our blogs!</h3>
+    <div class="row">
+        <div th:each="blog:${posts}">
+            <div class="col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <p th:text="${blog.title}"/>
+                    </div>
+                    <div class="panel-body">
+                        <p th:text="${blog.author}"/>
+                        <p th:text="${blog.blogEntry}" />
+                    </div>
+                    <div class="panel-footer">
+                        <!-- Link to Update -->
+                        <!-- Link to Show  -->
+                        <!--  Link to Destroy -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 <p>Please use the form below to submit a Blog Post:</p>
 <form action="#" th:action="@{/}" th:object="${blogPost}" method="post">
     <table>
@@ -42,3 +62,7 @@
  and the form
 
  Notice, the field names reference the attribute of our Blog Post Class (fields in our database table) -->
+
+<!-- <div th:each="blog:${posts}"> Here is where the blog post list is being accessed from the BlogPostController
+   at model.addAttribute("posts", posts);
+-->
