Added bootstrap code to html pages

--- a/src/main/resources/templates/blogpost/index.html
+++ b/src/main/resources/templates/blogpost/index.html
@@ -24,31 +24,35 @@
                         <!-- Link to Update -->
                         <!-- Link to Show  -->
                         <!--  Link to Destroy -->
+                        Buttons
                     </div>
                 </div>
             </div>
         </div>
     </div>
-<p>Please use the form below to submit a Blog Post:</p>
-<form action="#" th:action="@{/}" th:object="${blogPost}" method="post">
-    <table>
-        <tr>
-            <td>Title</td>
-            <td><input type="text" th:field="*{title}" /></td>
-        </tr>
-        <tr>
-            <td>Author:</td>
-            <td><input type="text" th:field="*{author}" /></td>
-        </tr>
-        <tr>
-            <td>Blog Entry:</td>
-            <td><input type="text" th:field="*{blogEntry}" /></td>
-        </tr>
-        <tr>
-            <td><button type="submit">Submit Your Post</button></td>
-        </tr>
-    </table>
-</form>
+<!--<p>Please use the form below to submit a Blog Post:</p>-->
+<!--<form action="#" th:action="@{/}" th:object="${blogPost}" method="post">-->
+<!--    <table>-->
+<!--        <tr>-->
+<!--            <td>Title</td>-->
+<!--            <td><input type="text" th:field="*{title}" /></td>-->
+<!--        </tr>-->
+<!--        <tr>-->
+<!--            <td>Author:</td>-->
+<!--            <td><input type="text" th:field="*{author}" /></td>-->
+<!--        </tr>-->
+<!--        <tr>-->
+<!--            <td>Blog Entry:</td>-->
+<!--            <td><input type="text" th:field="*{blogEntry}" /></td>-->
+<!--        </tr>-->
+<!--        <tr>-->
+<!--            <td><button type="submit">Submit Your Post</button></td>-->
+<!--        </tr>-->
+<!--    </table>-->
+<!--</form>-->
+    <a th:href="@{/blogposts/new}">
+        <button class= "btn btn-primary">Submit a New Blog Post</button>
+    </a>
 <script src="webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="webjars/jquery/1.9.1/jquery.min.js"></script>
 </div>
