--- a/src/main/resources/templates/blogpost/new.html
+++ b/src/main/resources/templates/blogpost/new.html
@@ -8,26 +8,45 @@
           rel="stylesheet">
 </head>
 <body>
-<p>Please use the form below to submit a Blog Post:</p>
-<form action="#" th:action="@{/blogposts}" th:object="${blogPost}" method="post">
-    <table>
-        <tr>
-            <td>Title</td>
-            <td><input type="text" th:field="*{title}" /></td>
-        </tr>
-        <tr>
-            <td>Author:</td>
-            <td><input type="text" th:field="*{author}" /></td>
-        </tr>
-        <tr>
-            <td>Blog Entry:</td>
-            <td><input type="text" th:field="*{blogEntry}" /></td>
-        </tr>
-        <tr>
-            <td><button type="submit">Submit Your Post</button></td>
-        </tr>
-    </table>
-</form>
+<!--<p>Please use the form below to submit a Blog Post:</p>-->
+<!--<form action="#" th:action="@{/blogposts}" th:object="${blogPost}" method="post">-->
+<!--    <table>-->
+<!--        <tr>-->
+<!--            <td>Title</td>-->
+<!--            <td><input type="text" th:field="*{title}" /></td>-->
+<!--        </tr>-->
+<!--        <tr>-->
+<!--            <td>Author:</td>-->
+<!--            <td><input type="text" th:field="*{author}" /></td>-->
+<!--        </tr>-->
+<!--        <tr>-->
+<!--            <td>Blog Entry:</td>-->
+<!--            <td><input type="text" th:field="*{blogEntry}" /></td>-->
+<!--        </tr>-->
+<!--        <tr>-->
+<!--            <td><button type="submit">Submit Your Post</button></td>-->
+<!--        </tr>-->
+<!--    </table>-->
+<!--</form>-->
+<div class="container">
+    <h1>Create a New Blog Post</h1>
+    <form action="#" th:action="@{/blogposts}" th:object="${blogPost}" method="post">
+
+        <div class="form-group">
+            <input type="text" class="form-control" placeholder="Blog Title..." th:field="*{title}" />
+        </div>
+
+        <div class="form-group">
+            <input type="text" class="form-control" placeholder="Your Name Here..." th:field="*{author}" />
+        </div>
+
+        <div class="form-group">
+            <input type="text" class ="form-control" placeholder="Blog Entry" th:field="*{blogEntry}" />
+        </div>
+
+        <button class="btn btn-primary">Submit Your Post</button>
+    </form>
+</div>
 
 <script src="webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script src="webjars/jquery/1.9.1/jquery.min.js"></script>
